# YanShi

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  PRODUCT.md  QUICKSTART.md  QUICKSTART.zh-CN.md  README.md  README.zh-CN.md  install.sh  mkdocs.yml  pyproject.toml
.cursor/plans/: yanshi_implementation_plan_de502d91.plan.md
.github/workflows/: docs.yml
.rules/: .compile-hashes.json  compile-config.yaml
docs/: contributing.md  contributing.zh.md  index.md  index.zh.md  troubleshooting.md  troubleshooting.zh.md
docs/adapters/: index.md  index.zh.md
docs/cli/: improve-loop.md  improve-loop.zh.md  reference.md  reference.zh.md
docs/concepts/: architecture.md  architecture.zh.md  monitoring.md  monitoring.zh.md  safety.md  safety.zh.md
docs/getting-started/: installation.md  installation.zh.md  quickstart.md  quickstart.zh.md
overrides/: main.html
skill/: SKILL.md  mcp_server.py
tests/: test_adapters_base.py  test_adapters_claude.py  test_adapters_codex.py  test_adapters_cursor.py  test_adapters_gemini.py  test_cli.py  test_config.py  test_contracts.py  test_devola_flow_dispatch.py  test_dispatch.py  test_docs_palette_contrast.py  test_errors.py  test_event_normalization.py  test_fleet.py  test_improve.py  test_install_integration.py  test_install_sh.py  test_live_clis.py  test_logsink.py  test_mcp_server.py  test_otel.py  test_paths.py  test_policy.py  test_preflight.py  test_reducer.py  test_registry.py  test_runner.py  test_runtime.py  test_secrets.py  test_skill_install.py  test_store.py  test_stream.py  test_summarizer.py  test_summary_client.py  test_supervisor.py  test_usage.py
(+52 files in other folders)
