[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yanshi"
version = "1.0.0"
description = "Vendor-neutral agent-CLI dispatch layer with deterministic low-context monitoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "filelock>=3.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocs-static-i18n>=1.2",
]

[project.scripts]
yanshi = "yanshi.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocs-static-i18n>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yanshi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "live: end-to-end tests that spawn real agent CLIs (needs YANSHI_LIVE=1 and authenticated CLIs)",
  "install_it: real install.sh integration tests (needs YANSHI_INSTALL_IT=1, uv, and a uv cache/network)",
]

[tool.coverage.run]
branch = true
source = ["src/yanshi"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
